--- a/docs/create/vercel/index-vercel.mdx
+++ b/docs/create/vercel/index-vercel.mdx
@@ -169,7 +169,7 @@ Vercel CLI 23.1.2
 ```
 
 
-Once the deployment process gets completed, a new .vercel directory will be added to your directory. The .vercel directory contains both the organization and project ID of your project. 
+Once the deployment process has completed, a new `.vercel` directory will be added to your directory. The `.vercel` directory contains both the organization and project ID of your project. 
 
 The "project.json" file contains:
 
