--- a/docs/create/vercel/index-vercel.mdx
+++ b/docs/create/vercel/index-vercel.mdx
@@ -186,7 +186,7 @@ Vercel CLI automatically detects the framework you are using and offers default 
 
 ### Step 8. Accessing the app 
 
-Run the below command to deploy Redis chat app to the Prod environment.
+Run the following command to deploy the Redis chat app to the Prod environment.
 ```
 vercel --prod
 Vercel CLI 23.1.2
