--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -11,7 +11,8 @@ slug: /develop/deno/
 ### Features of Deno
 
 
-- Deno is secure by default. It executes the code in a sandbox environment, disallowing runtime to the underlying filesystem, environmental variables and scripts.- Deno supports both JavaScript and  TypeScript out of the box.
+- Deno is secure by default. It executes code in a sandbox environment, disallowing runtime access to the underlying filesystem, environment variables and scripts.  
+- Deno supports both JavaScript and TypeScript out of the box.
 - Deno ships as a single executable with no dependencies.
 - Comes with built-in utilities like a dependency inspector (deno info) and a code formatter (deno fmt).
 
