--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -34,7 +34,7 @@ https://deno.land/std@0.126.0/examples
 ```
 
 
-In order to use Redis with Deno you will need a Deno Redis client. In the following sections, we will demonstrate the use of [an experimental implementation of Redis client for Deno](https://deno.land/x/redis@v0.25.3). 
+In order to use Redis with Deno you will need a Deno Redis client. In the following sections, we will demonstrate the use of [an experimental implementation of a Redis client for Deno](https://deno.land/x/redis@v0.25.3). 
 
 
 
