--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -79,7 +79,7 @@ Replace the following values with those of your database and save this file as r
 
 ### Step 4. Executing the script
 
-Deno can grab the scripts from multiple sources, a filename, a url, and '-' to read the file from stdin. 
+Deno can grab scripts from multiple sources.  For example, you can provide a filename, a url, or'-' to read the file from stdin. 
 You can run a JavaScript or TypeScript program by executing the ```deno run```.
 
 
