--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -88,7 +88,7 @@ deno run --allow-net redis.ts
 
 ```
 
-It should display the value of foo output. You can verify this by running the monitor command
+When you run the script, the value of `foo` should be output. You can verify this by running the monitor command:
 
 ```
 monitor
