--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -100,7 +100,7 @@ OK
 
 
 
-### Further Reference:
+### Further References:
 
 - [Getting Started with Deno Commandline Interface](https://deno.land/manual@v1.19.0/getting_started/command_line_interface)
 - [Deno Releases Page](https://github.com/denoland/deno/releases)
