--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -102,7 +102,7 @@ OK
 
 ### Further References:
 
-- [Getting Started with Deno Commandline Interface](https://deno.land/manual@v1.19.0/getting_started/command_line_interface)
+- [Getting Started with Deno Command Line Interface](https://deno.land/manual@v1.19.0/getting_started/command_line_interface)
 - [Deno Releases Page](https://github.com/denoland/deno/releases)
 - [Deno GitHub Repository](https://github.com/denoland/deno)
 - [Deno Runtimes](https://deno.land/manual@v1.19.0/runtime)
