--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -63,7 +63,7 @@ docker run -d -p 6379:6379 redislabs/redis
 ### Step 3. Create an empty file with the following content
 
 
-The following code creates a connection to Redis using Deno
+The following code creates a connection to Redis using Deno:
 
 ```javascript
 import { connect } from "https://deno.land/x/redis/mod.ts";
