--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -6,12 +6,12 @@ slug: /develop/deno/
 ---
 
 
-[With over 80,000 stars and 670+ contributors](https://github.com/denoland/deno), Deno is a popular modern runtime for JavaScript and TypeScript. It is built on [V8](https://v8.dev/) - an open-source JavaScript engine developed by the Chromium Project for Google Chrome and Chromium web browsers. Companies like GitHub, Amazon, Begin, IBM, Netlify, Siemens, Vercel etc.
+[With over 80,000 stars and 670+ contributors](https://github.com/denoland/deno), Deno is a popular modern runtime for JavaScript and TypeScript. It is built on [V8](https://v8.dev/) - an open-source JavaScript engine developed by the Chromium Project for Google Chrome and Chromium web browsers. 
 
 ### Features of Deno
 
 
-- Deno is secure by default. It executes the code in a sandbox environment, disallowing runtime to the underlying filesystem, environmental variables and scripts.- Deno supports both JavaScript and  TypeScript out of the box.
+- Deno is secure by default. It executes code in a sandbox environment, disallowing runtime access to the underlying filesystem, environment variables and scripts.  Deno supports both JavaScript and TypeScript out of the box.
 - Deno ships as a single executable with no dependencies.
 - Comes with built-in utilities like a dependency inspector (deno info) and a code formatter (deno fmt).
 
@@ -74,7 +74,9 @@ const ok = await redis.set("foo", "bar");
 const foo = await redis.get("foo");
 ```
 
-Replace the following values with those of your database and save this file as redis.ts
+
+Replace the values of hostname and port to match those of your Redis database, and add an extra password field if needed.
+
 
 ### Step 4. Executing the script
 
