--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -57,7 +57,7 @@ deno 1.19.0
 ### Step 2. Run Redis locally
  
 ```
-docker run -d -p 6379:6379 redislabs/redis
+docker run -d -p 6379:6379 redislabs/redismod
 ```
 
 ### Step 3. Create an empty file with the following content
