Added New Tutorial for RedisInsight v2 for RediSearch

--- a/docs/explore/redisinsightv2/index-redisinsightv2.mdx
+++ b/docs/explore/redisinsightv2/index-redisinsightv2.mdx
@@ -42,6 +42,17 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
         page="/explore/redisinsightv2/profiler"
         />
  </div>
+</div>
+<div class="row">
+
+  <div class="col">
+     <RedisCard
+        title="How To Use The RediSearch Browser Tool"
+        description="Perform Database Search and Analytics using the RediSearch Browser Tool in RedisInsight v2.0"
+        page="/explore/redisinsightv2/redisearch"
+        />
+ </div>
+
 
 </div>
 
