--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -380,7 +380,7 @@ FT.SEARCH "idx:movie" "@genre:{Thriller|Action}" FILTER release_year 1970  1980 
 ```
 
 
-### Step 8. AGGREGATION
+### Step 8. Aggregation
 
 #### Query: Number of movies by year
 
