--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -362,7 +362,7 @@ The FT.SEARCH syntax has two ways to query numeric fields:
 
 
 
-*   using the FILTER parameter
+*   using the `FILTER` parameter
 
 ```
 FT.SEARCH "idx:movie" "@genre:{Thriller|Action}" FILTER release_year 1970  1980 RETURN 2 title release_year
