--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -358,7 +358,7 @@ FT.SEARCH "idx:movie" "@genre:{Thriller|Action}" RETURN 2 title release_year
 
 #### Query : All the movies released between 1970 and 1980 (included)
 
-The FT.SEARCH syntax has two ways to query numeric fields:
+The `FT.SEARCH` syntax has two ways to query numeric fields:
 
 
 
