--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -263,7 +263,7 @@ Later when looking at the query syntax in more detail you will learn more about 
 
 It is also possible to limit the list of fields returned by the query using the `RETURN` parameter, let's run the same query, and return only the title and release_year.
 
-#### Query: All the movies that contains the string "war but NOT the jedi one"
+#### Query: All the movies that contains the string "war" but NOT the "jedi" one
 
 Adding the string `-Jedi` (minus) will ask the query engine not to return values that contain `jedi`.
 
