--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -235,7 +235,7 @@ FT.SEARCH idx:movie "war"
 #### Query: Limit the list of fields returned by the query using the RETURN parameter
 
 
-The FT.SEARCH commands returns a list of results starting with the number of results, then the list of elements (keys & fields).
+The `FT.SEARCH` commands returns a list of results starting with the number of results, then the list of elements (keys & fields).
 
 ```
 FT.SEARCH idx:movie "war" RETURN 2 title release_year
