--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -17,7 +17,7 @@ A full-featured pure desktop GUI client, RedisInsight supports RediSearch. [Redi
 ![MyImage](images/redisearch.png)
 
 *   Multi-line for building queries
-*   Added ability to submit query with ‘ctrl + enter’ in single line mode
+*   Ability to submit query with ‘ctrl + enter’ in single line mode
 *   Better handling of long index names in index selector dropdown
 *   Support Aggregation
 *   Support Fuzzy logic
