--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisearch
 title: Perform Database Search and Analytics using RediSearch Browser Tool in RedisInsight v2.0
-sidebar_label: Perform Database Search and Analytics using RediSearch Browser Tool in RedisInsight v2.0
+sidebar_label: Perform Database Search and Analytics using the RediSearch Browser Tool in RedisInsight v2.0
 slug: /explore/redisinsightv2/redisearch
 authors: [ajeet]
 ---
