--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -19,7 +19,7 @@ A full-featured pure desktop GUI client, RedisInsight supports RediSearch. [Redi
 *   Multi-line for building queries
 *   Ability to submit query with ‘ctrl + enter’ in single line mode
 *   Better handling of long index names in index selector dropdown
-*   Support Aggregation
+*   Supports Aggregation
 *   Support Fuzzy logic
 *   Simple and complex conditions
 *   Sorting
