--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -20,7 +20,7 @@ A full-featured pure desktop GUI client, RedisInsight supports RediSearch. [Redi
 *   Ability to submit query with ‘ctrl + enter’ in single line mode
 *   Better handling of long index names in index selector dropdown
 *   Supports Aggregation
-*   Support Fuzzy logic
+*   Supports Fuzzy logic
 *   Simple and complex conditions
 *   Sorting
 *   Pagination
