--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -21,7 +21,7 @@ A full-featured pure desktop GUI client, RedisInsight supports RediSearch. [Redi
 *   Better handling of long index names in index selector dropdown
 *   Supports Aggregation
 *   Supports Fuzzy logic
-*   Simple and complex conditions
+*   Supports simple and complex conditions
 *   Sorting
 *   Pagination
 *   Counting
