--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -29,7 +29,7 @@ A full-featured pure desktop GUI client, RedisInsight supports RediSearch. [Redi
 RediSearch allows you to quickly create indexes on datasets (stored as Redis Hashes or, with RedisJSON, as JSON documents), and uses an incremental indexing approach for rapid index creation and deletion. The indexes let you query your data at lightning speed, perform complex aggregations, and filter by properties, numeric ranges, and geographical distance.
 
 
-### Step 1. Create Redis database
+### Step 1. Create a Redis Database
 
 [Follow this link to create Redis database using Docker container ](/explore/redismod)that comes with RediSearch module enabled
 
