--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -31,7 +31,7 @@ RediSearch allows you to quickly create indexes on datasets (stored as Redis Has
 
 ### Step 1. Create a Redis Database
 
-[Follow this link to create Redis database using Docker container ](/explore/redismod)that comes with RediSearch module enabled
+[Follow this link to create a Redis database using a Docker container](/explore/redismod) that comes with the RediSearch module enabled.
 
 ### Step 2: Download RedisInsight
 
