--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -44,7 +44,7 @@ To install RedisInsight on your local system, you need to first download the sof
 
 
 Run the installer. 
-Once the installation gets completed, you should be able to connect to a Redis database connection.
+Once the installation  completes, you should be able to connect to a Redis database.
 
 Select "Connect to a Redis database".
 
