--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -73,7 +73,7 @@ A movie is represented by the following attributes:
 * **`imdb_id`** : id of the movie in the [IMDB](https://imdb.com) database.
 
 
-#### Key and Data structure
+#### Key and Data Structure
 
 As a Redis developer, one of the first things to look when building your application is to define the structure of the key and data (data design/data modeling).
 
