--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -75,7 +75,7 @@ A movie is represented by the following attributes:
 
 #### Key and Data Structure
 
-As a Redis developer, one of the first things to look when building your application is to define the structure of the key and data (data design/data modeling).
+As a Redis developer, one of the first things to look at when building your application is to define the structure of the key and data (data design/data modeling).
 
 A common way of defining the keys in Redis is to use specific patterns in them. For example in this application where the database will probably deal with various business objects: movies, actors, theaters, users, ... we can use the following pattern:
 
