--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -86,7 +86,7 @@ For example:
 * `user:001` the user with the id 001
 
 
-and for the movies information you should use a Redis [Hash](https://redis.io/topics/data-types#hashes). 
+and for the movie's information you should use a Redis [Hash](https://redis.io/topics/data-types#hashes). 
 
 A Redis Hash allows the application to structure all the movie attributes in individual fields; also RediSearch will index the fields based on the index definition.
 
