--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -165,7 +165,7 @@ Using RediSearch if you want to query on a field, you must first index that fiel
 * Rating
 * Genre
 
-When creating a index you define:
+When creating an index you define:
 
 * which data you want to index: all *hashes* with a key starting with `movies` 
 * which fields in the hashes you want to index using a Schema definition.
