--- a/docs/explore/redisinsightv2/index-redisinsightv2.mdx
+++ b/docs/explore/redisinsightv2/index-redisinsightv2.mdx
@@ -47,8 +47,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
   <div class="col">
      <RedisCard
-        title="How To Use The RediSearch Browser Tool"
-        description="Perform Database Search and Analytics using the RediSearch Browser Tool in RedisInsight v2.0"
+        title="How To Use The RediSearch Plugin in RedisInsight v2.0"
+        description="Perform Database Search and Analytics using the RediSearch Plugin in RedisInsight v2.0"
         page="/explore/redisinsightv2/redisearch"
         />
  </div>
