--- a/docs/explore/redisinsightv2/streams/index-streams.mdx
+++ b/docs/explore/redisinsightv2/streams/index-streams.mdx
@@ -25,7 +25,7 @@ In addition, Redis Streams has the concept of consumer groups. Redis Streams con
 
 Let’s dive under the covers and see [Redis Streams](https://redis.io/topics/streams-intro) through the lens of RedisInsight. You will see how to use the [Lettuce Java client](https://developer.redis.com/develop/java/#using-lettuce) to publish and consume messages using consumer groups. This is the first basic example that uses a single consumer.
 
-## Prerequisite:
+## Prerequisites:
 
 
 
