--- a/docs/explore/redisinsightv2/streams/index-streams.mdx
+++ b/docs/explore/redisinsightv2/streams/index-streams.mdx
@@ -41,7 +41,7 @@ To install RedisInsight on your local system, you need to first download the sof
 
 [Click this link](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
-![My Image](images/redisinsight_form.png)
+![ReidsInsight download form](images/redisinsight_form.png)
 
 
 Run the installer. 
