--- a/docs/explore/redisinsightv2/streams/index-streams.mdx
+++ b/docs/explore/redisinsightv2/streams/index-streams.mdx
@@ -48,7 +48,7 @@ Run the installer.
 
 Click "Add Database manually".
 
-![My Image](images/redisinsight_connection.png)
+![Connecting to a database with RedisInsight](images/redisinsight_connection.png)
 
 Enter the requested details, including Name, Host (endpoint), Port, and Password.  Then click “ADD REDIS DATABASE”.
 
