--- a/docs/explore/redisinsightv2/streams/index-streams.mdx
+++ b/docs/explore/redisinsightv2/streams/index-streams.mdx
@@ -128,7 +128,7 @@ Let us try to visualise the stream key using the RedisInsight browser tool as sh
 
 Open "Profiler" tool to analyse your Redis commands as shown below:
 
-![alt_text](images/redisinsight_profiler.png "image_tooltip")
+![RedisInsight profiler tool](images/redisinsight_profiler.png "image_tooltip")
 
 
 ## Additional Links
