--- a/docs/explore/redisinsightv2/streams/index-streams.mdx
+++ b/docs/explore/redisinsightv2/streams/index-streams.mdx
@@ -136,7 +136,7 @@ Open "Profiler" tool to analyse your Redis commands as shown below:
 - [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
 - [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
-
+- [RU202 Redis Streams](https://university.redis.com/courses/ru202/) - a course at Redis University
 ##
 
 <div>
