--- a/docs/explore/redisinsightv2/streams/index-streams.mdx
+++ b/docs/explore/redisinsightv2/streams/index-streams.mdx
@@ -123,7 +123,7 @@ In the first terminal, post 100 new messages:
 Let us try to visualise the stream key using the RedisInsight browser tool as shown below: 
 
 
-![alt_text](images/redisinsight_key.png "image_tooltip")
+![RedisInsight key manager](images/redisinsight_key.png "image_tooltip")
 
 
 Open "Profiler" tool to analyse your Redis commands as shown below:
