--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -6,7 +6,7 @@ slug: /develop/deno/
 ---
 
 
-[With over 80,000 stars and 670+ contributors](https://github.com/denoland/deno), Deno is a popular modern runtime for JavaScript and TypeScript. It is built on [V8](https://v8.dev/) - an open-source JavaScript engine developed by the Chromium Project for Google Chrome and Chromium web browsers. 
+[With over 80,000 stars and 670+ contributors](https://github.com/denoland/deno), Deno is a popular modern runtime for JavaScript and TypeScript. It is built on [V8](https://v8.dev/), an open-source JavaScript engine developed by the Chromium Project for Google Chrome and Chromium web browsers. 
 
 ### Features of Deno
 
@@ -14,12 +14,12 @@ slug: /develop/deno/
 - Deno is secure by default. It executes code in a sandbox environment, disallowing runtime access to the underlying filesystem, environment variables and scripts.  
 - Deno supports both JavaScript and TypeScript out of the box.
 - Deno ships as a single executable with no dependencies.
-- Comes with built-in utilities like a dependency inspector (deno info) and a code formatter (deno fmt).
+- Comes with built-in utilities such as  a dependency inspector (deno info) and a code formatter (deno fmt).
 
 
-### Getting Started
+### Getting started
 
-[deno.land/x](https://deno.land/x) is a hosting service for Deno scripts. It caches releases of open source modules stored on GitHub and serves them at one easy to remember domain. These modules contain small scripts that demonstrate use of Deno and its standard module.
+[deno.land/x](https://deno.land/x) is a hosting service for Deno scripts. It caches releases of open source modules stored on GitHub and serves them at one easy-to-remember domain. These modules contain small scripts that demonstrate use of Deno and its standard module.
 
 The basic format of code URLs is 
 
@@ -79,9 +79,9 @@ const foo = await redis.get("foo");
 Replace the values of hostname and port to match those of your Redis database, and add an extra password field if needed.
 
 
-### Step 5. Executing the script
+### Step 5. Execute the script
 
-Deno can grab scripts from multiple sources.  For example, you can provide a filename, a url, or'-' to read the file from stdin. 
+Deno can grab scripts from multiple sources.  For example, you can provide a filename, a URL, or'-' to read the file from stdin. 
 You can run a JavaScript or TypeScript program by executing ```deno run```.
 
 
@@ -102,7 +102,7 @@ OK
 
 
 
-### Further References:
+### Additional references:
 
 - [Getting Started with Deno Command Line Interface](https://deno.land/manual@v1.19.0/getting_started/command_line_interface)
 - [Deno Releases Page](https://github.com/denoland/deno/releases)
