--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -81,7 +81,7 @@ Replace the values of hostname and port to match those of your Redis database, a
 
 ### Step 5. Executing the script
 
-Deno can grab scripts from multiple sources.  For example, you can provide a filename, a url, or'-' to read the file from stdin. 
+Deno can grab scripts from multiple sources.  For example, you can provide a filename, a URL, or'-' to read the file from stdin. 
 You can run a JavaScript or TypeScript program by executing ```deno run```.
 
 
