--- a/docs/develop/deno/index.deno.mdx
+++ b/docs/develop/deno/index.deno.mdx
@@ -11,13 +11,13 @@ slug: /develop/deno/
 ### Features of Deno
 
 
-- Deno is secure by default. It executes code in a sandbox environment, disallowing runtime access to the underlying filesystem, environment variables and scripts.  
+- Deno is secure by default. It executes code in a sandbox environment, disallowing runtime access to the underlying filesystem, environment variables and scripts. 
 - Deno supports both JavaScript and TypeScript out of the box.
 - Deno ships as a single executable with no dependencies.
 - Comes with built-in utilities such as a dependency inspector (deno info) and a code formatter (deno fmt).
 
 
-### Getting started
+### Getting Started
 
 [deno.land/x](https://deno.land/x) is a hosting service for Deno scripts. It caches releases of open source modules stored on GitHub and serves them at one easy-to-remember domain. These modules contain small scripts that demonstrate use of Deno and its standard module.
 
@@ -79,7 +79,7 @@ const foo = await redis.get("foo");
 Replace the values of hostname and port to match those of your Redis database, and add an extra password field if needed.
 
 
-### Step 5. Execute the script
+### Step 5. Executing the script
 
 Deno can grab scripts from multiple sources.  For example, you can provide a filename, a URL, or'-' to read the file from stdin. 
 You can run a JavaScript or TypeScript program by executing ```deno run```.
