Added New Google Cloud Run tutorial

--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -7,9 +7,6 @@ authors: [ajeet]
 ---
 
 
-
-
-
 ![alt_text](images/cloudrun_logo.png "image_tooltip")
 
 
@@ -24,11 +21,11 @@ Cloud Run is [powered and built on Knative](https://cloud.google.com/knative). K
 
 
 
-* Cloud Run provides you with the option to write your code in your preferred programming languages such as [NodeJS,](https://github.com/GoogleCloudPlatform/nodejs-docs-samples/blob/master/run/helloworld/) [Python](https://github.com/GoogleCloudPlatform/python-docs-samples/blob/master/run/), [Go](https://github.com/GoogleCloudPlatform/golang-samples/tree/master/run/), and [Java](https://github.com/GoogleCloudPlatform/java-docs-samples/tree/master/run/).
-* Cloud Run provides you a better ROI as you get charged only for the resources used.
-* Cloud Run offers a[ longer request timeout duration of up to 60 minutes](https://cloud.google.com/run/docs/configuring/request-timeout).
-* Cloud Run is configured to [send multiple concurrent requests on each container instance. ](https://cloud.google.com/run/docs/configuring/concurrency)This is helpful to improve latency and reduce costs if you’re expecting large volumes.
-* Cloud Run lets you [create microservice-based applications that are scalable and extensible](https://cloud.google.com/blog/products/serverless/build-event-driven-applications-in-cloud-run).
+- Cloud Run provides you with the option to write your code in your preferred programming languages such as [NodeJS,](https://github.com/GoogleCloudPlatform/nodejs-docs-samples/blob/master/run/helloworld/) [Python](https://github.com/GoogleCloudPlatform/python-docs-samples/blob/master/run/), [Go](https://github.com/GoogleCloudPlatform/golang-samples/tree/master/run/), and [Java](https://github.com/GoogleCloudPlatform/java-docs-samples/tree/master/run/).
+- Cloud Run provides you a better ROI as you get charged only for the resources used.
+- Cloud Run offers a[ longer request timeout duration of up to 60 minutes](https://cloud.google.com/run/docs/configuring/request-timeout).
+- Cloud Run is configured to [send multiple concurrent requests on each container instance. ](https://cloud.google.com/run/docs/configuring/concurrency)This is helpful to improve latency and reduce costs if you’re expecting large volumes.
+- Cloud Run lets you [create microservice-based applications that are scalable and extensible](https://cloud.google.com/blog/products/serverless/build-event-driven-applications-in-cloud-run).
 
 In this tutorial, you will learn how to deploy a simple Redis Rating limiting application to Google Cloud Run in just 5 minutes.
 
