--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -258,7 +258,7 @@ Last updated on 2022-02-19T02:50:03.100357Z by ajeet.raina@redis.com:
 
 
 
-![alt_text](images/gcloud6.png "image_tooltip")
+![Allowing all traffic](images/gcloud6.png "image_tooltip")
 
 
 ### Step 8. Access your app
