--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -250,7 +250,7 @@ Last updated on 2022-02-19T02:50:03.100357Z by ajeet.raina@redis.com:
 
 
 
-![alt_text](images/gcloud5.png "image_tooltip")
+![Configuring the VPC connector](images/gcloud5.png "image_tooltip")
 
 
 
