--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -267,7 +267,7 @@ Open [https://django-redis-rate-limiting-example-opcboau66a-de.a.run.app/](https
 
 
 
-![alt_text](images/ratelimit.png "image_tooltip")
+![Running the application](images/ratelimit.png "image_tooltip")
 
 
 This app allows you to choose the desired requests every 10 seconds. The app blocks connections from a client after surpassing a certain amount of requests (default: 10) per time (default: 10 sec). That will let the user know how many requests they have remaining before they run over the limit. On the tenth run, the server should return an HTTP status code of 429 (“Too Many Requests”).
