--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -270,7 +270,7 @@ Open [https://django-redis-rate-limiting-example-opcboau66a-de.a.run.app/](https
 ![Running the application](images/ratelimit.png "image_tooltip")
 
 
-This app allows you to choose the desired requests every 10 seconds. The app blocks connections from a client after surpassing a certain amount of requests (default: 10) per time (default: 10 sec). That will let the user know how many requests they have remaining before they run over the limit. On the tenth run, the server should return an HTTP status code of 429 (“Too Many Requests”).
+This app allows you to choose the desired number of requests in each 10 second period. The app blocks connections from a client after surpassing a certain amount of requests (default: 10) in the time window (default: 10 sec). That will let the user know how many requests they have remaining before they run over the limit. On the tenth run, the server should return an HTTP status code of 429 (“Too Many Requests”).
 
 ### Additional references:
 
