--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -50,7 +50,7 @@ Visit [developer.redis.com/create/rediscloud/](https://developer.redis.com/creat
 
 
 
-![alt_text](images/rediscloud_register.png "image_tooltip")
+![Registering for Redis Cloud](images/rediscloud_register.png "image_tooltip")
 
 
 ### Step 2. Install Google Cloud CLI
